--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
 		"expo-linking": "~6.3.1",
 		"expo-router": "~3.5.23",
 		"expo-status-bar": "~1.12.1",
+		"expo-storage": "^51.0.8",
 		"react": "18.2.0",
 		"react-native": "0.74.5",
 		"react-native-safe-area-context": "4.10.5",
