--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,18 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
+		"@expo/vector-icons": "^14.0.3",
 		"axios": "^1.7.7",
 		"expo": "~51.0.28",
 		"expo-constants": "~16.0.2",
+		"expo-linear-gradient": "~13.0.2",
 		"expo-linking": "~6.3.1",
 		"expo-router": "~3.5.23",
 		"expo-status-bar": "~1.12.1",
 		"expo-storage": "^51.0.8",
 		"react": "18.2.0",
 		"react-native": "0.74.5",
+		"react-native-phone-call": "^1.2.0",
 		"react-native-safe-area-context": "4.10.5",
 		"react-native-screens": "3.31.1"
 	},
