--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
 		"expo-storage": "^51.0.8",
 		"react": "18.2.0",
 		"react-native": "0.74.5",
+		"react-native-element-dropdown": "^2.12.1",
 		"react-native-phone-call": "^1.2.0",
 		"react-native-safe-area-context": "4.10.5",
 		"react-native-screens": "3.31.1"
