--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
 		"expo-router": "~3.5.23",
 		"expo-status-bar": "~1.12.1",
 		"expo-storage": "^51.0.8",
+		"moment": "^2.30.1",
 		"react": "18.2.0",
 		"react-native": "0.74.5",
 		"react-native-element-dropdown": "^2.12.1",
