adding more features

--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
 	"type": "module",
 	"scripts": {
 		"start": "node index.js",
-		"dev": "node --watch index.js"
+		"dev": "node --watch index.js",
+		"database": "sudo systemctl start mongod"
 	},
 	"keywords": [],
 	"author": "",
